--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,10 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGODB_URI
-        sync: false # This will need to be set in Render's dashboard 
+        sync: false # This will need to be set in Render's dashboard
+      - key: OPENAI_API_KEY
+        sync: false # This will need to be set in Render's dashboard
+    routes:
+      - type: rewrite
+        source: /*
+        destination: / 
