--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "openai": "^4.85.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
