--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@types/joi": "^17.2.2",
+    "@types/uuid": "^10.0.0",
     "cache-manager": "^6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "mongoose": "^8.10.1",
-    "openai": "^4.85.4"
+    "openai": "^4.85.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
