--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "cache-manager": "^6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "joi": "^17.13.3",
+    "langchain": "^0.3.19",
     "mongoose": "^8.10.1",
     "openai": "^4.85.4",
+    "pdfkit": "^0.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -46,8 +49,10 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
+    "@types/pdfkit": "^0.13.9",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
